--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,11 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>3.0.1</version>
     </dependency>
-
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>hackaton1</finalName>
